// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VinylPagination disables next button on last page 1`] = `
<div
  className="css-9vd5ud"
>
  <div
    className="css-cw2e6h"
  >
    <button
      aria-label="Previous page"
      className="css-1b2ompy"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-left"
        data-icon="chevron-left"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      className="css-3umnwr"
    >
      <div
        className="css-1b6rjoo"
      >
        <button
          aria-label="Go to page 1"
          className="css-rjnzsf"
          onClick={[Function]}
        >
          1
        </button>
        <button
          aria-label="Go to page 2"
          className="css-1tpqzpg"
          onClick={[Function]}
        >
          2
        </button>
        <button
          aria-current="page"
          aria-label="Go to page 3"
          className="css-qb4jev"
          onClick={[Function]}
        >
          3
        </button>
      </div>
    </div>
    <button
      aria-label="Next page"
      className="css-1wqopuy"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-right"
        data-icon="chevron-right"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M311.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L243.2 256 73.9 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1wp5sa6"
  >
    Page 
    3
     of 
    3
  </div>
</div>
`;

exports[`VinylPagination disables previous button on first page 1`] = `
<div
  className="css-9vd5ud"
>
  <div
    className="css-cw2e6h"
  >
    <button
      aria-label="Previous page"
      className="css-1wqopuy"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-left"
        data-icon="chevron-left"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      className="css-3umnwr"
    >
      <div
        className="css-1b6rjoo"
      >
        <button
          aria-current="page"
          aria-label="Go to page 1"
          className="css-qb4jev"
          onClick={[Function]}
        >
          1
        </button>
        <button
          aria-label="Go to page 2"
          className="css-1tpqzpg"
          onClick={[Function]}
        >
          2
        </button>
        <button
          aria-label="Go to page 3"
          className="css-rjnzsf"
          onClick={[Function]}
        >
          3
        </button>
      </div>
    </div>
    <button
      aria-label="Next page"
      className="css-1b2ompy"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-right"
        data-icon="chevron-right"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M311.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L243.2 256 73.9 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1wp5sa6"
  >
    Page 
    1
     of 
    3
  </div>
</div>
`;

exports[`VinylPagination does not render pagination controls when totalPages <= 1 1`] = `
<div
  className="css-9vd5ud"
/>
`;

exports[`VinylPagination renders pagination controls when totalPages > 1 1`] = `
<div
  className="css-9vd5ud"
>
  <div
    className="css-cw2e6h"
  >
    <button
      aria-label="Previous page"
      className="css-1wqopuy"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-left"
        data-icon="chevron-left"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      className="css-3umnwr"
    >
      <div
        className="css-1b6rjoo"
      >
        <button
          aria-current="page"
          aria-label="Go to page 1"
          className="css-qb4jev"
          onClick={[Function]}
        >
          1
        </button>
        <button
          aria-label="Go to page 2"
          className="css-1tpqzpg"
          onClick={[Function]}
        >
          2
        </button>
        <button
          aria-label="Go to page 3"
          className="css-rjnzsf"
          onClick={[Function]}
        >
          3
        </button>
      </div>
    </div>
    <button
      aria-label="Next page"
      className="css-1b2ompy"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-right"
        data-icon="chevron-right"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M311.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L243.2 256 73.9 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1wp5sa6"
  >
    Page 
    1
     of 
    3
  </div>
</div>
`;

exports[`VinylPagination shows correct page info 1`] = `
<div
  className="css-9vd5ud"
>
  <div
    className="css-cw2e6h"
  >
    <button
      aria-label="Previous page"
      className="css-1b2ompy"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-left"
        data-icon="chevron-left"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      className="css-3umnwr"
    >
      <div
        className="css-1b6rjoo"
      >
        <button
          aria-label="Go to page 1"
          className="css-rjnzsf"
          onClick={[Function]}
        >
          1
        </button>
        <button
          aria-current="page"
          aria-label="Go to page 2"
          className="css-qb4jev"
          onClick={[Function]}
        >
          2
        </button>
        <button
          aria-label="Go to page 3"
          className="css-1tpqzpg"
          onClick={[Function]}
        >
          3
        </button>
        <button
          aria-label="Go to page 4"
          className="css-rjnzsf"
          onClick={[Function]}
        >
          4
        </button>
      </div>
    </div>
    <button
      aria-label="Next page"
      className="css-1b2ompy"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-right"
        data-icon="chevron-right"
        data-prefix="fas"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M311.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L243.2 256 73.9 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1wp5sa6"
  >
    Page 
    2
     of 
    5
  </div>
</div>
`;
